--- a/styles.css
+++ b/styles.css
@@ -120,3 +120,10 @@ nav {
     font-size: 20px;
     margin-bottom: 28px;
 }
+
+.about-me__link {
+    font-size: 20px;
+    color: black;
+    text-decoration: none;
+    padding: 0 16px;
+}
