--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,12 @@ nav {
     display: flex;
     flex-direction: column;
 }
+
+.about-me__info {
+    display: flex;
+    flex-direction: column;
+
+}
    
 .about-me__info--container {
     display: flex;
@@ -126,4 +132,18 @@ nav {
     color: black;
     text-decoration: none;
     padding: 0 16px;
+}
+
+.about-me__img--container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+.about-me__img {
+    width: 100%;
+    padding: 24px;
 }
